--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # Site settings
 title: *folio
 email: you@example.com
-description: > # this means to ignore newlines until "baseurl:"
-  A simple, whitespace, helvetica based portfolio theme.
+description: "A simple, whitespace, helvetica based portfolio theme."
 baseurl:  # the subpath of your site, e.g. /blog/
-url:  # the base hostname & protocol for your site
+url:  "https://manut2017.github.io"# the base hostname & protocol for your site
 twitter_username: twitter_username
 github_username:  github_username
 
